materials/archive/PPJ/Vežbe/Rokovi/jan2_2019/v2/parser.output
Grammar

    0 $accept: program $end

    1 program: program naredba '\n'
    2        | naredba '\n'

    3 naredba: izraz
    4        | ID '=' izraz
    5        | PRINT '(' izraz ')'
    6        | NOM '(' izraz ')'
    7        | DEN '(' izraz ')'
    8        | DOUBLE '(' izraz ')'
    9        | EQUALS '(' izraz ',' izraz ')'

   10 izraz: '[' BROJ ',' BROJ ']'
   11      | '[' BROJ ']'
   12      | izraz '+' izraz
   13      | izraz '-' izraz
   14      | izraz '*' izraz
   15      | izraz '/' izraz
   16      | '(' izraz ')'
   17      | ID


Terminals, with rules where they appear

    $end (0) 0
    '\n' (10) 1 2
    '(' (40) 5 6 7 8 9 16
    ')' (41) 5 6 7 8 9 16
    '*' (42) 14
    '+' (43) 12
    ',' (44) 9 10
    '-' (45) 13
    '/' (47) 15
    '=' (61) 4
    '[' (91) 10 11
    ']' (93) 10 11
    error (256)
    PRINT (258) 5
    NOM (259) 6
    DEN (260) 7
    DOUBLE (261) 8
    EQUALS (262) 9
    BROJ <val> (263) 10 11
    ID <s> (264) 4 17


Nonterminals, with rules where they appear

    $accept (21)
        on left: 0
    program (22)
        on left: 1 2
        on right: 0 1
    naredba (23)
        on left: 3 4 5 6 7 8 9
        on right: 1 2
    izraz <r> (24)
        on left: 10 11 12 13 14 15 16 17
        on right: 3 4 5 6 7 8 9 12 13 14 15 16


State 0

    0 $accept: • program $end

    PRINT   shift, and go to state 1
    NOM     shift, and go to state 2
    DEN     shift, and go to state 3
    DOUBLE  shift, and go to state 4
    EQUALS  shift, and go to state 5
    ID      shift, and go to state 6
    '('     shift, and go to state 7
    '['     shift, and go to state 8

    program  go to state 9
    naredba  go to state 10
    izraz    go to state 11


State 1

    5 naredba: PRINT • '(' izraz ')'

    '('  shift, and go to state 12


State 2

    6 naredba: NOM • '(' izraz ')'

    '('  shift, and go to state 13


State 3

    7 naredba: DEN • '(' izraz ')'

    '('  shift, and go to state 14


State 4

    8 naredba: DOUBLE • '(' izraz ')'

    '('  shift, and go to state 15


State 5

    9 naredba: EQUALS • '(' izraz ',' izraz ')'

    '('  shift, and go to state 16


State 6

    4 naredba: ID • '=' izraz
   17 izraz: ID •

    '='  shift, and go to state 17

    $default  reduce using rule 17 (izraz)


State 7

   16 izraz: '(' • izraz ')'

    ID   shift, and go to state 18
    '('  shift, and go to state 7
    '['  shift, and go to state 8

    izraz  go to state 19


State 8

   10 izraz: '[' • BROJ ',' BROJ ']'
   11      | '[' • BROJ ']'

    BROJ  shift, and go to state 20


State 9

    0 $accept: program • $end
    1 program: program • naredba '\n'

    $end    shift, and go to state 21
    PRINT   shift, and go to state 1
    NOM     shift, and go to state 2
    DEN     shift, and go to state 3
    DOUBLE  shift, and go to state 4
    EQUALS  shift, and go to state 5
    ID      shift, and go to state 6
    '('     shift, and go to state 7
    '['     shift, and go to state 8

    naredba  go to state 22
    izraz    go to state 11


State 10

    2 program: naredba • '\n'

    '\n'  shift, and go to state 23


State 11

    3 naredba: izraz •
   12 izraz: izraz • '+' izraz
   13      | izraz • '-' izraz
   14      | izraz • '*' izraz
   15      | izraz • '/' izraz

    '+'  shift, and go to state 24
    '-'  shift, and go to state 25
    '*'  shift, and go to state 26
    '/'  shift, and go to state 27

    $default  reduce using rule 3 (naredba)


State 12

    5 naredba: PRINT '(' • izraz ')'

    ID   shift, and go to state 18
    '('  shift, and go to state 7
    '['  shift, and go to state 8

    izraz  go to state 28


State 13

    6 naredba: NOM '(' • izraz ')'

    ID   shift, and go to state 18
    '('  shift, and go to state 7
    '['  shift, and go to state 8

    izraz  go to state 29


State 14

    7 naredba: DEN '(' • izraz ')'

    ID   shift, and go to state 18
    '('  shift, and go to state 7
    '['  shift, and go to state 8

    izraz  go to state 30


State 15

    8 naredba: DOUBLE '(' • izraz ')'

    ID   shift, and go to state 18
    '('  shift, and go to state 7
    '['  shift, and go to state 8

    izraz  go to state 31


State 16

    9 naredba: EQUALS '(' • izraz ',' izraz ')'

    ID   shift, and go to state 18
    '('  shift, and go to state 7
    '['  shift, and go to state 8

    izraz  go to state 32


State 17

    4 naredba: ID '=' • izraz

    ID   shift, and go to state 18
    '('  shift, and go to state 7
    '['  shift, and go to state 8

    izraz  go to state 33


State 18

   17 izraz: ID •

    $default  reduce using rule 17 (izraz)


State 19

   12 izraz: izraz • '+' izraz
   13      | izraz • '-' izraz
   14      | izraz • '*' izraz
   15      | izraz • '/' izraz
   16      | '(' izraz • ')'

    '+'  shift, and go to state 24
    '-'  shift, and go to state 25
    '*'  shift, and go to state 26
    '/'  shift, and go to state 27
    ')'  shift, and go to state 34


State 20

   10 izraz: '[' BROJ • ',' BROJ ']'
   11      | '[' BROJ • ']'

    ','  shift, and go to state 35
    ']'  shift, and go to state 36


State 21

    0 $accept: program $end •

    $default  accept


State 22

    1 program: program naredba • '\n'

    '\n'  shift, and go to state 37


State 23

    2 program: naredba '\n' •

    $default  reduce using rule 2 (program)


State 24

   12 izraz: izraz '+' • izraz

    ID   shift, and go to state 18
    '('  shift, and go to state 7
    '['  shift, and go to state 8

    izraz  go to state 38


State 25

   13 izraz: izraz '-' • izraz

    ID   shift, and go to state 18
    '('  shift, and go to state 7
    '['  shift, and go to state 8

    izraz  go to state 39


State 26

   14 izraz: izraz '*' • izraz

    ID   shift, and go to state 18
    '('  shift, and go to state 7
    '['  shift, and go to state 8

    izraz  go to state 40


State 27

   15 izraz: izraz '/' • izraz

    ID   shift, and go to state 18
    '('  shift, and go to state 7
    '['  shift, and go to state 8

    izraz  go to state 41


State 28

    5 naredba: PRINT '(' izraz • ')'
   12 izraz: izraz • '+' izraz
   13      | izraz • '-' izraz
   14      | izraz • '*' izraz
   15      | izraz • '/' izraz

    '+'  shift, and go to state 24
    '-'  shift, and go to state 25
    '*'  shift, and go to state 26
    '/'  shift, and go to state 27
    ')'  shift, and go to state 42


State 29

    6 naredba: NOM '(' izraz • ')'
   12 izraz: izraz • '+' izraz
   13      | izraz • '-' izraz
   14      | izraz • '*' izraz
   15      | izraz • '/' izraz

    '+'  shift, and go to state 24
    '-'  shift, and go to state 25
    '*'  shift, and go to state 26
    '/'  shift, and go to state 27
    ')'  shift, and go to state 43


State 30

    7 naredba: DEN '(' izraz • ')'
   12 izraz: izraz • '+' izraz
   13      | izraz • '-' izraz
   14      | izraz • '*' izraz
   15      | izraz • '/' izraz

    '+'  shift, and go to state 24
    '-'  shift, and go to state 25
    '*'  shift, and go to state 26
    '/'  shift, and go to state 27
    ')'  shift, and go to state 44


State 31

    8 naredba: DOUBLE '(' izraz • ')'
   12 izraz: izraz • '+' izraz
   13      | izraz • '-' izraz
   14      | izraz • '*' izraz
   15      | izraz • '/' izraz

    '+'  shift, and go to state 24
    '-'  shift, and go to state 25
    '*'  shift, and go to state 26
    '/'  shift, and go to state 27
    ')'  shift, and go to state 45


State 32

    9 naredba: EQUALS '(' izraz • ',' izraz ')'
   12 izraz: izraz • '+' izraz
   13      | izraz • '-' izraz
   14      | izraz • '*' izraz
   15      | izraz • '/' izraz

    '+'  shift, and go to state 24
    '-'  shift, and go to state 25
    '*'  shift, and go to state 26
    '/'  shift, and go to state 27
    ','  shift, and go to state 46


State 33

    4 naredba: ID '=' izraz •
   12 izraz: izraz • '+' izraz
   13      | izraz • '-' izraz
   14      | izraz • '*' izraz
   15      | izraz • '/' izraz

    '+'  shift, and go to state 24
    '-'  shift, and go to state 25
    '*'  shift, and go to state 26
    '/'  shift, and go to state 27

    $default  reduce using rule 4 (naredba)


State 34

   16 izraz: '(' izraz ')' •

    $default  reduce using rule 16 (izraz)


State 35

   10 izraz: '[' BROJ ',' • BROJ ']'

    BROJ  shift, and go to state 47


State 36

   11 izraz: '[' BROJ ']' •

    $default  reduce using rule 11 (izraz)


State 37

    1 program: program naredba '\n' •

    $default  reduce using rule 1 (program)


State 38

   12 izraz: izraz • '+' izraz
   12      | izraz '+' izraz •
   13      | izraz • '-' izraz
   14      | izraz • '*' izraz
   15      | izraz • '/' izraz

    '*'  shift, and go to state 26
    '/'  shift, and go to state 27

    $default  reduce using rule 12 (izraz)


State 39

   12 izraz: izraz • '+' izraz
   13      | izraz • '-' izraz
   13      | izraz '-' izraz •
   14      | izraz • '*' izraz
   15      | izraz • '/' izraz

    '*'  shift, and go to state 26
    '/'  shift, and go to state 27

    $default  reduce using rule 13 (izraz)


State 40

   12 izraz: izraz • '+' izraz
   13      | izraz • '-' izraz
   14      | izraz • '*' izraz
   14      | izraz '*' izraz •
   15      | izraz • '/' izraz

    $default  reduce using rule 14 (izraz)


State 41

   12 izraz: izraz • '+' izraz
   13      | izraz • '-' izraz
   14      | izraz • '*' izraz
   15      | izraz • '/' izraz
   15      | izraz '/' izraz •

    $default  reduce using rule 15 (izraz)


State 42

    5 naredba: PRINT '(' izraz ')' •

    $default  reduce using rule 5 (naredba)


State 43

    6 naredba: NOM '(' izraz ')' •

    $default  reduce using rule 6 (naredba)


State 44

    7 naredba: DEN '(' izraz ')' •

    $default  reduce using rule 7 (naredba)


State 45

    8 naredba: DOUBLE '(' izraz ')' •

    $default  reduce using rule 8 (naredba)


State 46

    9 naredba: EQUALS '(' izraz ',' • izraz ')'

    ID   shift, and go to state 18
    '('  shift, and go to state 7
    '['  shift, and go to state 8

    izraz  go to state 48


State 47

   10 izraz: '[' BROJ ',' BROJ • ']'

    ']'  shift, and go to state 49


State 48

    9 naredba: EQUALS '(' izraz ',' izraz • ')'
   12 izraz: izraz • '+' izraz
   13      | izraz • '-' izraz
   14      | izraz • '*' izraz
   15      | izraz • '/' izraz

    '+'  shift, and go to state 24
    '-'  shift, and go to state 25
    '*'  shift, and go to state 26
    '/'  shift, and go to state 27
    ')'  shift, and go to state 50


State 49

   10 izraz: '[' BROJ ',' BROJ ']' •

    $default  reduce using rule 10 (izraz)


State 50

    9 naredba: EQUALS '(' izraz ',' izraz ')' •

    $default  reduce using rule 9 (naredba)
